--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "express-session": "^1.17.2",
         "moment": "^2.29.3",
         "mysql2": "^2.3.3",
+        "path": "^0.12.7",
         "sequelize": "^6.19.0"
     }
 }
