--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/chuanw101/byo-backpack#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cloudinary": "^1.29.1",
         "connect-session-sequelize": "^7.1.3",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
